<resources>
    <string name="app_name">RallyApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_greeting">Hello Amanda 👋 </string>
    <string name="plate_details_description_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="user_activity_title">Update your details and click SAVE</string>
    <string name="user_activity_fullname">Enter your first and last name</string>
    <string name="user_activity_email_hint">Enter your email address</string>
    <string name="user_activity_username">Enter your username</string>
    <string name="user_activity_password_hint">Enter your password</string>
    <string name="user_activity_save_button_text">Save ✔</string>
    <string name="user_activity_logout_button_text">Log Out</string>
    <string name="user_activity_password_warning_text">*If you do not want to update your password, please leave the password field blank.</string>
    <string name="checkout_activity_title">Checkout</string>
    <string name="order_activity_order_items_title">Order Items</string>
    <string name="order_activity_voucher_edit_text_hint">Code</string>
    <string name="order_activity_voucher_title">Voucher</string>
    <string name="order_activity_voucher_apply_button_text">Claim</string>
    <string name="order_activity_order_summary_title">Order Summary</string>
    <string name="order_activity_order_summary_total_price_label">Total Price:</string>
    <string name="order_activity_order_summary_tax_price_label">Tax Price:</string>
    <string name="order_activity_order_summary_grand_total_label">Grand Total:</string>
    <string name="order_activity_address_title">Choose an address</string>
    <string name="checkout_activity_proceed_to_pay_button_text">PROCEED TO PAY</string>
    <string name="add_address_fragment_save_button_text">SAVE</string>
    <string name="add_address_fragment_save_cancel_text">CANCEL</string>
    <string name="add_address_fragment_address_line_1_hint">Address Line 1</string>
    <string name="add_address_fragment_address_line_2_hint">Address Line 2 (Optional)</string>
    <string name="add_address_fragment_city_hint">City</string>
    <string name="add_address_fragment_postal_code_hint">Postal Code</string>
    <string name="checkout_activity_cancel_button_text">CANCEL</string>
    <string name="add_address_fragment_title_text">New Address</string>
    <string name="add_address_fragment_full_name_hint">full name</string>
    <string name="order_receipt_bottom_sheet_title">Order receipt</string>
    <string name="home_activity_discount_title">Get special discount!</string>
    <string name="home_activity_discount_text">up to 35%</string>
    <string name="home_activity_claim_voucher_button_text">Claim Voucher</string>
    <string name="plate_detail_activity_add_to_cart">Add to Cart</string>
    <string name="new_address">new address</string>
    <string name="status_placeholder">status : waiting for pickup</string>
    <string name="checkout_activity_map_duration_placeholder">12min</string>
    <string name="checkout_activity_map_distance">12Km</string>
    <string name="your_order_is_ready_for_pickup">Your order is ready for pickup</string>
    <string name="notification_title_placeholder">PULLED PORK SA.. +3 items</string>
    <string name="notification_time_placeholder">12:30 AM 20th January</string>
    <string name="search_activity_no_results_label">No result(s) found.</string>
    <string name="search_activity_search_text_box_placeholder">What would you like to eat?</string>
    <string name="cart_activity_cart_is_empty_label">Cart is empty ☹️</string>

</resources>