<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp">

    <ImageView
        android:background= "@drawable/capsule_background"
        android:backgroundTint="@color/black"
        android:id="@+id/order_status_notification_image_icon"
        android:src="@drawable/top_bar_logo"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/order_status_notification_title"
        android:layout_toRightOf="@id/order_status_notification_image_icon"
        android:text="@string/your_order_is_ready_for_pickup"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/order_status_notification_item_list"
        android:layout_toRightOf="@id/order_status_notification_image_icon"
        android:layout_below="@id/order_status_notification_title"
        android:text="@string/notification_title_placeholder"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/order_status_notification_time"
        android:layout_toRightOf="@id/order_status_notification_image_icon"
        android:layout_below="@id/order_status_notification_item_list"
        android:text="@string/notification_time_placeholder"
        android:textColor="@color/green"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>