<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.CheckoutActivity">

    <ScrollView
        android:id="@+id/checkout_activity_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true"
        android:layout_marginBottom="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/checkout_activity_title"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"
                android:text="@string/checkout_activity_title"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/order_activity_order_items_title"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"
                android:text="@string/order_activity_order_items_title"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/checkout_activity_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/order_activity_order_items_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"
                app:layout_constraintTop_toBottomOf="@id/order_activity_order_items_title"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/order_activity_address_icon"
                android:src="@drawable/ic_baseline_house_24"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"
                app:layout_constraintTop_toBottomOf="@id/order_activity_order_items_recycler_view"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/order_activity_address_title"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="18dp"
                android:text="@string/order_activity_address_title"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/order_activity_order_items_recycler_view"
                app:layout_constraintStart_toEndOf="@id/order_activity_address_icon" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/order_activity_address_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/order_activity_address_title" />

            <ImageView
                android:src="@drawable/ic_baseline_local_offer_24"
                android:id="@+id/order_activity_voucher_icon"
                app:layout_constraintTop_toBottomOf="@id/order_activity_address_recycler_view"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="13dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/order_activity_voucher_title"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"
                android:text="@string/order_activity_voucher_title"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/order_activity_address_recycler_view"
                app:layout_constraintStart_toEndOf="@id/order_activity_voucher_icon" />

            <EditText
                android:id="@+id/order_activity_voucher_text_box"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"
                android:hint="@string/order_activity_voucher_edit_text_hint"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/order_activity_voucher_title"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/order_activity_voucher_apply_button"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"
                android:text="@string/order_activity_voucher_apply_button_text"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/green"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/order_activity_voucher_title"
                app:layout_constraintStart_toEndOf="@id/order_activity_voucher_text_box"/>

            <TextView
                android:id="@+id/order_activity_voucher_response"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/order_activity_voucher_text_box"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/order_activity_order_summary_title"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"
                android:text="@string/order_activity_order_summary_title"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/order_activity_voucher_text_box"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                app:layout_constraintTop_toBottomOf="@id/order_activity_order_summary_title"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/order_activity_order_summary_total_price_label"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="15dp"
                        android:gravity="center|start"
                        android:text="@string/order_activity_order_summary_total_price_label"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent" />
                    <TextView
                        android:id="@+id/order_activity_order_summary_total_price_value"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="15dp"
                        android:gravity="end|center"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/order_activity_order_summary_tax_price_label"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="15dp"
                        android:gravity="center|start"
                        android:text="@string/order_activity_order_summary_tax_price_label"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent" />
                    <TextView
                        android:id="@+id/order_activity_order_summary_tax_price_value"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="15dp"
                        android:gravity="end|center"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/order_activity_order_summary_grand_total_price_label"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="15dp"
                        android:gravity="center|start"
                        android:text="@string/order_activity_order_summary_grand_total_label"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/order_activity_order_summary_grand_total_value"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="15dp"
                        android:gravity="end|center"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent" />
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>